--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,9 +35,7 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildFeatures {
-        compose true
-    }
+
     composeOptions {
         kotlinCompilerExtensionVersion '1.3.2'
     }
@@ -75,5 +73,14 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-rx2:1.6.4"
 
+    // lifecycle
+    def lifecycle_version = "2.5.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 
+    //dagger
+    implementation "com.google.dagger:dagger:2.43.2"
+    implementation "com.google.dagger:dagger-android:2.43.2"
+    implementation "com.google.dagger:dagger-android-support:2.43.2"
+    kapt 'com.google.dagger:dagger-compiler:2.43.2'
 }
