add: добавлена дб

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,4 +84,10 @@ dependencies {
     implementation "com.google.dagger:dagger-android:2.43.2"
     implementation "com.google.dagger:dagger-android-support:2.43.2"
     kapt 'com.google.dagger:dagger-compiler:2.43.2'
+
+    //Room
+    implementation "androidx.room:room-runtime:2.5.1"
+    implementation "androidx.room:room-ktx:2.5.1"
+
+    kapt 'androidx.room:room-compiler:2.5.1'
 }
