--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,8 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-rx2:1.6.4"
+    implementation project(path: ':currency_impl')
+    implementation project(path: ':currency_api')
 
     // lifecycle
     def lifecycle_version = "2.5.1"
