--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,5 @@ dependencyResolutionManagement {
 }
 rootProject.name = "Currency"
 include ':app'
+include ':currency_impl'
+include ':currency_api'
