--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,14 @@ android {
 }
 
 dependencies {
+
+    implementation project(path: ':currency_impl')
+    implementation project(path: ':currency_api')
+    implementation project(path: ':currencies_screen_impl')
+    implementation project(path: ':converter_screen_impl')
+    implementation project(path: ':core')
+
+
     // Base
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
@@ -73,8 +81,6 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-rx2:1.6.4"
-    implementation project(path: ':currency_impl')
-    implementation project(path: ':currency_api')
 
     // lifecycle
     def lifecycle_version = "2.5.1"
@@ -92,4 +98,5 @@ dependencies {
     implementation "androidx.room:room-ktx:2.5.1"
 
     kapt 'androidx.room:room-compiler:2.5.1'
+
 }
