--- a/currency_api/build.gradle
+++ b/currency_api/build.gradle
@@ -38,4 +38,13 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    //dagger
+    implementation "com.google.dagger:dagger:2.43.2"
+    implementation "com.google.dagger:dagger-android:2.43.2"
+    implementation "com.google.dagger:dagger-android-support:2.43.2"
+
+    //navigation
+    implementation("androidx.navigation:navigation-fragment-ktx:2.3.5")
+    implementation("androidx.navigation:navigation-ui-ktx:2.3.5")
 }
