--- a/currencies_screen_impl/build.gradle
+++ b/currencies_screen_impl/build.gradle
@@ -61,4 +61,10 @@ dependencies {
     implementation "com.google.dagger:dagger-android-support:2.43.2"
 
     implementation "androidx.fragment:fragment-ktx:1.5.7"
+
+    //navigation
+    implementation("androidx.navigation:navigation-fragment-ktx:2.3.5")
+    implementation("androidx.navigation:navigation-ui-ktx:2.3.5")
+
+    implementation("androidx.activity:activity-ktx:1.2.1")
 }
