feat: добавлен  swiperefresh для обновления списка валюты

--- a/currencies_screen_impl/build.gradle
+++ b/currencies_screen_impl/build.gradle
@@ -67,4 +67,6 @@ dependencies {
     implementation("androidx.navigation:navigation-ui-ktx:2.3.5")
 
     implementation("androidx.activity:activity-ktx:1.2.1")
+
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
 }
