--- a/settings.gradle
+++ b/settings.gradle
@@ -20,3 +20,4 @@ include ':currencies_screen_impl'
 include ':converter_screen_impl'
 include ':core'
 include ':core_ui'
+include ':favorites_screen_impl'
