--- a/core_ui/build.gradle
+++ b/core_ui/build.gradle
@@ -31,6 +31,7 @@ android {
 }
 
 dependencies {
+    implementation(project(":currency_api"))
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
