--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,8 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.katerinavp.currency.TestRunner"
+//        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary true
         }
@@ -106,4 +107,27 @@ dependencies {
 
     kapt 'androidx.room:room-compiler:2.5.1'
 
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.4.0', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.google.code.findbugs', module: 'jsr305'
+    })
+    androidTestImplementation "androidx.test:runner:1.5.2"
+    androidTestImplementation "androidx.test:rules:1.5.0"
+    androidTestImplementation "androidx.arch.core:core-testing:2.2.0"
+    androidTestImplementation "org.mockito:mockito-android:4.3.1"
+
+    testImplementation "junit:junit:4.13.2"
+    testImplementation "androidx.arch.core:core-testing:2.2.0"
+    testImplementation "org.mockito:mockito-core:4.3.1"
+    testImplementation "com.squareup.okhttp3:mockwebserver:5.0.0-alpha.4"
+
+
+    //testing ui
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.4.0'
+    kaptAndroidTest 'com.google.dagger:dagger-compiler:2.41'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
+
+    debugImplementation 'androidx.fragment:fragment-testing:1.6.0-alpha04'
 }
