--- a/currencies_screen_impl/build.gradle
+++ b/currencies_screen_impl/build.gradle
@@ -11,7 +11,7 @@ android {
         minSdk 24
         targetSdk 33
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+//        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
 
@@ -69,4 +69,27 @@ dependencies {
     implementation("androidx.activity:activity-ktx:1.2.1")
 
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.4.0', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.google.code.findbugs', module: 'jsr305'
+    })
+    androidTestImplementation "androidx.test:runner:1.5.2"
+    androidTestImplementation "androidx.test:rules:1.5.0"
+    androidTestImplementation "androidx.arch.core:core-testing:2.2.0"
+    androidTestImplementation "org.mockito:mockito-android:4.3.1"
+
+    testImplementation "junit:junit:4.13.2"
+    testImplementation "androidx.arch.core:core-testing:2.2.0"
+    testImplementation "org.mockito:mockito-core:4.3.1"
+    testImplementation "com.squareup.okhttp3:mockwebserver:5.0.0-alpha.4"
+
+
+    //testing ui
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
+
+    debugImplementation 'androidx.fragment:fragment-testing:1.6.0-alpha04'
 }
